# nvhacker

./: ARCHITECTURE.md  README.md  __main__.py  pyproject.toml
core/: bitfield.py  control.py  disassembler.py  elf_patch.py  instruction.py
test/: branch_32_loop.cu  branch_32_loop.manual.cubin  branch_32_loop.sm100.cubin
tui/: app.py  asm_view.py  bitgrid.py  hex_view.py  probe_panel.py
