[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nvhacker"
version = "0.1.0"
description = "NVIDIA GPU instruction binary explorer"
requires-python = ">=3.9"
dependencies = ["textual>=0.40.0"]

[project.scripts]
nvhacker = "nvhacker.__main__:main"
